--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@
 }
 
 html{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
 }
 
 #header{
     height: 46px;
-    background-color: black;
+    background-color: rgb(209, 213, 214);
     position: fixed;
     top: 0;
     left: 0;
@@ -23,7 +23,7 @@ html{
 }
 
 #nav li a{
-    color: white;
+    color: black;
     text-transform: uppercase;
     text-decoration: none;
     line-height: 46px;
@@ -32,8 +32,8 @@ html{
 }
 
 #nav li:hover a{
-    color: black;
-    background-color: gray;
+    color: white;
+    background-color: black;
 }
 /* Kich thuoc chung cua body */
 #content{
@@ -61,29 +61,29 @@ html{
 }
 
 #content .about-text{
-    font-size: 17px;
+    font-size: 15px;
     line-height: 2.5;
-    list-style-type: none;
+    text-align: justify;
 }
 
 #content .about-img{
     margin-right: 60px;
-    width: 215px;
+    width: 200px;
     border-radius: 10px;
 }
 /* Contact */
 #content .contact-section{
-    background-color: black;
-    color: white;
+    background-color: rgb(209, 213, 214);
+    color: black;
 }
 #content .contact{
     margin: 50px 200px 0;
-    font-size: 17px;
+    font-size: 15px;
     line-height: 2.5;
 }
 /* Sua link facebook */
 .contact a{
-    color: white;
+    color: black;
     text-decoration: none;
 }
 /* Dieu chinh icon */
