--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,10 +11,10 @@
         margin-top: 46px;
     }
     
-    #content .content-section{
+    #about-id .content-section {
         /* Thiết lập chung cho khung của mỗi content */
         width: 400px;
-        height: 900px;
+        height: 950px;
         padding: 50px 0;
         /* Tự động căn chỉnh trái phải */
         margin-left: auto;
@@ -28,7 +28,7 @@
         font-size: 30px;
         font-weight: 500;
         /* Khoảng cách của từng chữ tiêu đề */
-        letter-spacing: 10px; 
+        letter-spacing: 2px; 
     }
     
     #content .about{
@@ -53,8 +53,14 @@
         line-height: 3;
     }
     
-    #contact-id{
-        height: 450px;
+    #contact-id .content-section {
+        /* Thiết lập chung cho khung của mỗi content */
+        width: 400px;
+        height: 400px;
+        padding: 50px 0;
+        /* Tự động căn chỉnh trái phải */
+        margin-left: auto;
+        margin-right: auto;
     }
     
     #footer{
